# templates

./: README.md
web/: README.md
web/basic1/: README.md  package-lock.json  package.json
web/basic1/backend/: Cargo.toml  schema.sql
web/basic1/backend/src/: graphql.rs  main.rs
web/basic1/backend/src/graphql/: mutation.rs  query.rs
web/basic1/frontend/: package.json
web/basic1/frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
web/basic1/frontend/src/components/: Button.module.css  Button.tsx  HogeFetcher.tsx  Square.module.css  Square.tsx
