[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rocket = { version = "0.5.1", features = ["secrets", "tls", "json"] }
rocket_cors = "0.6.0"
async-graphql = "7"
async-graphql-rocket = "7"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "sqlite" ] }
anyhow = "1"
